--- a/app/src/main/res/layout/email.xml
+++ b/app/src/main/res/layout/email.xml
@@ -63,14 +63,24 @@
             android:layout_height="wrap_content"
             android:textColor="?attr/colorPrimary"
             android:textSize="24dp"
-            android:text="Send Email to:"/>
+            android:text="Inquire about:"/>
         <Spinner
             android:layout_marginTop="8dp"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:id="@+id/spinner" />
+        <EditText
+            android:visibility="gone"
+            android:hint="ask us about"
+            android:padding="8dp"
+            android:layout_marginTop="8dp"
+            android:background="#13154396"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/etop" />
 
         <TextView
+            android:visibility="gone"
             android:textColor="?attr/colorPrimary"
             android:textSize="24sp"
             android:layout_width="wrap_content"
@@ -80,6 +90,7 @@
              />
 
         <EditText
+            android:visibility="gone"
             android:padding="8dp"
             android:lines="2"
             android:id="@+id/ettitle"
@@ -113,7 +124,7 @@
 
         android:id="@+id/submit"
         android:layout_marginTop="12dp"
-        android:text="Submit"
+        android:text="Send"
         android:background="@drawable/button_background"
         android:textColor="#fff"
         android:layout_gravity="center_horizontal"
