--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,11 +1,11 @@
 <android.support.v4.widget.SwipeRefreshLayout
     android:layout_height="fill_parent"
-    android:layout_marginTop="60dp"
+    android:layout_marginTop="40dp"
     android:layout_width="fill_parent"
     android:id="@+id/shhhhhwipe"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
-
+   android:id="@+id/test"
     android:layout_marginBottom="8dp"
     android:orientation="vertical"
     android:layout_height="match_parent"
