--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
-        android:padding="16dp"
+        android:padding="8dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <FrameLayout
             android:layout_marginRight="16dp"
             android:layout_width="60dp"
-            android:layout_height="80dp">
+            android:layout_height="wrap_content">
 
             <!--<ImageView-->
                 <!--android:layout_width="60dp"-->
@@ -34,23 +34,7 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:id="@+id/textView"/>
-    <LinearLayout
-        android:layout_gravity="center_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-    <ImageView
-        android:id="@+id/downloadable"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-      />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-           android:gravity="center_vertical"
-            android:id="@+id/filesize"
-            />
-    </LinearLayout>
+
 </LinearLayout>
 
 
