--- a/app/src/main/res/layout/report.xml
+++ b/app/src/main/res/layout/report.xml
@@ -27,7 +27,7 @@
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
     <ScrollView
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
 
         android:layout_width="match_parent"
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -82,7 +82,7 @@
     <TextView
 
         android:textStyle="bold"
-        android:textSize="30sp"
+        android:textSize="36sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -123,6 +123,7 @@
     <TextView
         android:layout_marginBottom="8dp"
         android:textColor="#000"
+
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_width="wrap_content"
@@ -131,10 +132,93 @@
         android:text="Content loading.."
         android:id="@+id/content"
        />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/contact"
+            android:layout_gravity="bottom|left"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+
+                android:layout_gravity="center"
+                android:layout_margin="2dp"
+                android:elevation="8dp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                card_view:cardCornerRadius="6dp">
+                <TextView
+
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Name,Title,Department"
+                    android:id="@+id/name"
+                    />
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:onClick="openEmail"
+                android:layout_gravity="center"
+                android:layout_margin="2dp"
+                android:elevation="8dp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                card_view:cardCornerRadius="6dp">
+                <TextView
+
+                    android:layout_marginBottom="4dp"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="myemail@kpmg.co.ke"
+                    android:id="@+id/email"
+                    />
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:onClick="openWebsite"
+                android:layout_gravity="center"
+                android:layout_margin="2dp"
+                android:elevation="8dp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                card_view:cardCornerRadius="6dp">
+                <TextView
+
+                    android:layout_marginBottom="4dp"
+                    android:textColor="#000"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="www.kpmg.com/eastafrica"
+                    android:id="@+id/website"
+                    />
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+
     </LinearLayout>
 
+
+
     </ScrollView>
+
+
 </LinearLayout>
+
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
