--- a/app/src/main/res/layout/report.xml
+++ b/app/src/main/res/layout/report.xml
@@ -134,6 +134,7 @@
        />
 
         <LinearLayout
+
             android:orientation="vertical"
             android:id="@+id/contact"
             android:layout_gravity="bottom|left"
@@ -142,7 +143,7 @@
             <android.support.v7.widget.CardView
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
-
+                android:id="@+id/card1"
                 android:layout_gravity="center"
                 android:layout_margin="2dp"
                 android:elevation="8dp"
