--- a/app/src/main/res/layout/report.xml
+++ b/app/src/main/res/layout/report.xml
@@ -43,11 +43,19 @@
 
     android:orientation="horizontal"
     android:layout_height="wrap_content">
-    <ImageView
-        android:src="@drawable/header"
+    <!--<ImageView-->
+        <!--android:src="@drawable/header"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/imageViewHead" />
+
+        -->
+    <mushirih.thoughtleadership2.SquareImageView
+        android:id="@+id/imageViewHead"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView3" />
+        android:background="@drawable/header"
+        android:scaleType="centerCrop"/>
     <LinearLayout
         android:id="@+id/dwn"
         android:visibility="gone"
@@ -152,7 +160,7 @@
                 android:layout_height="wrap_content"
                 card_view:cardCornerRadius="6dp">
                 <TextView
-
+                    android:padding="4dp"
                     android:textColor="#000"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="4dp"
@@ -175,9 +183,9 @@
                 android:layout_height="wrap_content"
                 card_view:cardCornerRadius="6dp">
                 <TextView
-
+                    android:padding="4dp"
                     android:layout_marginBottom="4dp"
-                    android:textColor="#000"
+                    android:textColor="#1a68cf"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="4dp"
                     android:layout_width="wrap_content"
@@ -198,9 +206,9 @@
                 android:layout_height="wrap_content"
                 card_view:cardCornerRadius="6dp">
                 <TextView
-
+                    android:padding="4dp"
                     android:layout_marginBottom="8dp"
-                    android:textColor="#000"
+                    android:textColor="#1a68cf"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="4dp"
                     android:layout_width="wrap_content"
