--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="#ffffff"
+<FrameLayout
+    android:background="#fff"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
 
-    <ImageView
-        android:src="@mipmap/spash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imagesplash"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+<VideoView
+   android:layout_gravity="center_vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_centerVertical="true"
+    android:layout_centerHorizontal="true"
+
+    android:id="@+id/spl"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
+
+   </FrameLayout>
+    <!--<ImageView-->
+        <!--android:src="@mipmap/spash"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/imagesplash"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:layout_centerHorizontal="true" />-->
