--- a/app/src/main/res/layout/cred_item_layout.xml
+++ b/app/src/main/res/layout/cred_item_layout.xml
@@ -3,7 +3,7 @@
         android:orientation="horizontal"
         android:padding="16dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <FrameLayout
             android:layout_marginRight="16dp"
@@ -29,7 +29,7 @@
         <TextView
             android:textSize="16sp"
             android:textColor="#000"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
