--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -6,7 +6,7 @@
 
     android:background="#4f000000"
 
-    android:paddingBottom="@dimen/activity_vertical_margin"
+
     tools:context=".MainActivity"
     android:orientation="vertical">
     <android.support.design.widget.AppBarLayout
@@ -23,8 +23,9 @@
             app:popupTheme="@style/AppTheme.PopupOverlay">
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
-    <LinearLayout
-        android:layout_marginTop="12dp"
+    <RelativeLayout
+        android:gravity="center_vertical"
+        android:layout_marginTop="4dp"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:id="@+id/holder"
@@ -38,9 +39,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
 
-        android:layout_marginTop="7dp">
+        android:layout_marginTop="4dp">
     </android.support.v7.widget.RecyclerView>
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </LinearLayout>
