--- a/app/src/main/res/layout/cred_item_layout.xml
+++ b/app/src/main/res/layout/cred_item_layout.xml
@@ -29,17 +29,18 @@
         <TextView
             android:textSize="16sp"
             android:textColor="#000"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
             android:id="@+id/name"/>
 
 
         <TextView
-            android:layout_width="wrap_content"
+            android:textSize="16sp"
+            android:textColor="#000"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-           android:gravity="center_vertical"
+
             android:id="@+id/pos"
             />
 
