--- a/app/src/main/res/layout/item_row_connect.xml
+++ b/app/src/main/res/layout/item_row_connect.xml
@@ -24,15 +24,16 @@
 
     <ImageView
 
-        android:layout_weight="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/rowIcon"
         android:paddingLeft="6dp"
         android:src="@drawable/header"/>
 
     <TextView
-        android:textColor="#000"
+        android:textColor="#fff"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="9"
