--- a/app/src/main/res/layout/cred_item_layout.xml
+++ b/app/src/main/res/layout/cred_item_layout.xml
@@ -8,7 +8,7 @@
         <FrameLayout
             android:layout_marginRight="16dp"
             android:layout_width="60dp"
-            android:layout_height="80dp">
+            android:layout_height="60dp">
 
             <!--<ImageView-->
                 <!--android:layout_width="60dp"-->
@@ -25,9 +25,9 @@
 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
         <TextView
-            android:textSize="16sp"
+            android:textSize="20sp"
             android:textColor="#000"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
 
         <TextView
             android:textSize="16sp"
-            android:textColor="#000"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
