--- a/app/src/main/res/layout/credentials2.xml
+++ b/app/src/main/res/layout/credentials2.xml
@@ -86,9 +86,7 @@
                         android:id="@+id/title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/spacing_large"
-                        android:layout_marginRight="@dimen/spacing_large"
-                        android:layout_marginTop="@dimen/spacing_large"
+                        android:layout_margin="@dimen/spacing_large"
                         android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
                     </android.support.v7.widget.CardView>
                     <android.support.v7.widget.CardView
@@ -98,12 +96,12 @@
                         app:cardElevation="@dimen/spacing_medium"
                         app:cardUseCompatPadding="true">
                     <TextView
-                        android:id="@+id/description"
+                        android:id="@+id/desc"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/spacing_large"
                         android:text="Description goes here"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+                       />
                     </android.support.v7.widget.CardView>
                 </LinearLayout>
 
