--- a/app/src/main/res/layout/credentials2.xml
+++ b/app/src/main/res/layout/credentials2.xml
@@ -83,6 +83,7 @@
                         app:cardUseCompatPadding="true">
 
                     <TextView
+                        android:text="name"
                         android:id="@+id/title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -101,6 +102,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/spacing_large"
                         android:text="Description goes here"
+                        android:textSize="20sp"
                        />
                     </android.support.v7.widget.CardView>
                 </LinearLayout>
