--- a/app/src/main/res/layout/bout.xml
+++ b/app/src/main/res/layout/bout.xml
@@ -27,6 +27,11 @@
         android:layout_width="match_parent"
         android:text="Text goes here"
         android:layout_height="wrap_content" />
+        <TextView
+            android:textColor="#fff"
+            android:layout_width="match_parent"
+            android:text="App Name:KPMG East Africa\nApp Version:1.0\n"
+            android:layout_height="wrap_content" />
 
 </LinearLayout>
 </LinearLayout>
