--- a/app/src/main/res/layout/bout.xml
+++ b/app/src/main/res/layout/bout.xml
@@ -25,7 +25,7 @@
     <TextView
         android:textColor="#fff"
         android:layout_width="match_parent"
-        android:text="Text goes here"
+        android:text=""
         android:layout_height="wrap_content" />
         <TextView
             android:textColor="#fff"
