--- a/app/src/main/res/layout/credentials2.xml
+++ b/app/src/main/res/layout/credentials2.xml
@@ -81,14 +81,27 @@
 
                         app:cardElevation="@dimen/spacing_medium"
                         app:cardUseCompatPadding="true">
+                        <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_margin="@dimen/spacing_large"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
                     <TextView
                         android:text="name"
                         android:id="@+id/title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/spacing_large"
+
                         android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
+                        <TextView
+                            android:textSize="16sp"
+                           android:text="pos"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/pos"
+                            />
+                        </LinearLayout>
                     </android.support.v7.widget.CardView>
                     <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
