--- a/app/src/main/res/layout/bout.xml
+++ b/app/src/main/res/layout/bout.xml
@@ -22,15 +22,17 @@
         android:padding="@dimen/spacing_large"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:textColor="#fff"
-        android:layout_width="match_parent"
-        android:text=""
-        android:layout_height="wrap_content" />
+
         <TextView
             android:textColor="#fff"
             android:layout_width="match_parent"
-            android:text="App Name:KPMG East Africa\nApp Version:1.0\n"
+            android:text="App Name:KPMG East Africa\nApp Version:1.0"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/box"
+            android:textColor="#fff"
+            android:layout_width="match_parent"
+            android:text=""
             android:layout_height="wrap_content" />
 
 </LinearLayout>
