--- a/app/src/main/res/layout/credentials.xml
+++ b/app/src/main/res/layout/credentials.xml
@@ -25,11 +25,11 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <LinearLayout
-            android:background="@drawable/me"
-            android:id="@+id/imageholder"
-            android:layout_width="match_parent"
-            android:layout_height="240dp">
+        <!--<LinearLayout-->
+            <!--android:background="@drawable/me"-->
+            <!--android:id="@+id/imageholder"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="240dp">-->
         <LinearLayout
             android:background="#68ffffff"
             android:gravity="center_horizontal|center_vertical"
@@ -37,14 +37,14 @@
             android:layout_width="match_parent"
             android:layout_height="250dp">
 
-         <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:src="@drawable/me"
-               app:civ_border_width="2dp"
-               app:civ_border_color="#ffffff"
-                android:id="@+id/circleView"
-                />
+         <!--<de.hdodenhof.circleimageview.CircleImageView-->
+                <!--android:layout_width="120dp"-->
+                <!--android:layout_height="120dp"-->
+                <!--android:src="@drawable/me"-->
+               <!--app:civ_border_width="2dp"-->
+               <!--app:civ_border_color="#ffffff"-->
+                <!--android:id="@+id/circleView"-->
+                <!--/>-->
 </LinearLayout>
 
         </LinearLayout>
@@ -207,6 +207,6 @@
 
         </LinearLayout>
         </android.support.v7.widget.CardView>
-    </LinearLayout>
+    <!--</LinearLayout>-->
     </ScrollView>
 </LinearLayout>
