--- a/app/src/main/res/layout/bout.xml
+++ b/app/src/main/res/layout/bout.xml
@@ -26,7 +26,7 @@
         <TextView
             android:textColor="#fff"
             android:layout_width="match_parent"
-            android:text="App Name:KPMG East Africa\nApp Version:1.0"
+            android:text="App Name:XpatLink \nApp Version:1.0"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/box"
