--- a/app/src/main/res/layout/webview.xml
+++ b/app/src/main/res/layout/webview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -22,11 +23,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/activity_home" />
+    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/webview"
+        android:layout_margin="4dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
 
-    <!--<android.support.design.widget.FloatingActionButton android:id="@+id/fab"-->
-    <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
-    <!--android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"-->
-    <!--android:src="@drawable/search" />-->
-
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
